--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/framework-bundle": "7.2.*",
         "symfony/runtime": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
+        "symfony/ux-icons": "^2.25",
         "symfony/ux-twig-component": "^2.25",
         "symfony/yaml": "7.2.*"
     },
