--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "autoprefixer": "^10.4.21",
         "axios": "^1.9.0",
-        "dayjs": "^1.11.13"
+        "dayjs": "^1.11.13",
+        "sortablejs": "^1.15.6"
     }
 }
