--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@types/sortablejs": "^1.15.8",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0",
         "vite-plugin-symfony": "^8.0"
