--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,14 @@
 {
-    "type": "project",
-    "license": "proprietary",
+    "name": "witte/sydatagrid",
+    "description": "Symfony DataGrid",
+    "type": "library",
+    "license": "WITTE",
+     "authors": [
+        {
+            "name": "Oleg Kuzmenko",
+            "email": "oleg.kuzmenko@witte-automotive.cz"
+        }
+    ],
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
