--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "SyDataGrid\\": "src/"
         }
     },
     "autoload-dev": {
