--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -22,7 +22,7 @@ doctrine:
                 type: attribute
                 is_bundle: false
                 dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
+                prefix: 'SyDataGrid\Entity'
                 alias: App
         controller_resolver:
             auto_mapping: false
