--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
             "email": "oleg.kuzmenko@witte-automotive.cz"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php": ">=8.2",
