--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "pentatrion/vite-bundle": "^8.1",
         "symfony/asset": "7.2.*",
         "symfony/console": "7.2.*",
+        "symfony/dependency-injection": "7.2.*",
         "symfony/dotenv": "7.2.*",
         "symfony/flex": "^2.6",
         "symfony/framework-bundle": "7.2.*",
