--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "witte/sydatagrid",
     "description": "Symfony DataGrid",
-    "type": "library",
+    "type": "symfony-bundle",
     "version": "1.0.0",
     "license": "proprietary",
      "authors": [
@@ -19,6 +19,7 @@
         "doctrine/orm": "^3.3.3",
         "symfony/asset": "7.2.*",
         "symfony/console": "7.2.*",
+        "symfony/dependency-injection": "7.2.*",
         "symfony/dotenv": "7.2.*",
         "symfony/flex": "^2.6",
         "symfony/framework-bundle": "7.2.*",
@@ -28,15 +29,6 @@
         "symfony/ux-twig-component": "^2.25.2",
         "symfony/yaml": "7.2.*"
     },
-    "config": {
-        "allow-plugins": {
-            "php-http/discovery": true,
-            "symfony/flex": true,
-            "symfony/runtime": true
-        },
-        "bump-after-update": true,
-        "sort-packages": true
-    },
     "autoload": {
         "psr-4": {
             "SyDataGrid\\": "src/"
@@ -44,7 +36,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "SyDataGrid\\Tests\\": "tests/"
         }
     },
     "conflict": {
@@ -54,6 +46,12 @@
         "symfony": {
             "allow-contrib": false,
             "require": "7.2.*"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "symfony/flex": true,
+            "symfony/runtime": true
         }
     }
 }
