--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -3,3 +3,6 @@ services:
     autowire: true
     autoconfigure: true
     public: true
+
+  SyDataGrid\Twig\SyDataGridExtenstion:
+    tags: ["twig.extension"]
