--- a/config/packages/twig_component.yaml
+++ b/config/packages/twig_component.yaml
@@ -2,4 +2,4 @@ twig_component:
     anonymous_template_directory: 'components/'
     defaults:
         # Namespace & directory for components
-        Witte\Datagrid\Twig\Components\: 'components/'
+        Witte\SyDatagrid\\Twig\Components\: 'components/'
